--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   sqflite: ^1.3.1
   path_provider: ^1.6.10
   uuid: ^2.1.0
+  shimmer: ^0.0.6
 dev_dependencies:
   flutter_test:
     sdk: flutter
